# secure-torch

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_BLOG.md  all_tests_out.txt  coverage.xml  doc_content.txt  fail2.txt  fail_details.txt  information.md  int_results.txt  new_change.md  output.txt  output_full.txt  output_pytest.txt  patch_arch.py  patch_docs.py  patch_sbom.py  patch_scoring.py  pyproject.toml  secure-torch-implementation-plan.docx  single_test_out.txt  test_fail_details.txt  test_fail_details_2.txt  test_model.pt  test_out.txt  test_out_final.txt  test_out_final_utf8.txt  test_results.txt  tr.txt  unit_out.txt  unit_out2.txt
.github/workflows/: ci.yml  security.yml
docs/: api.md  api_reference.md  architecture_and_usage.md  changelog.md  conf.py  contributing.md  cve_coverage.md  hardcoded_constants.md  installation.md  quickstart.md  requirements.txt  sandbox.md  sbom.md  signature_verification.md  threat_scoring.md  trust_policy.md
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  api_reference.html  changelog.html  concepts.html  contributing.html  cve_coverage.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  sandbox.html  sbom.html  search.html  searchindex.js  (+5 more)
examples/: integrations.py  linkedin_demo.py  real_world_dataset_test.py  real_world_output_utf8.txt
examples/malicious_dataset/: 01_reverse_shell.pt  02_data_exfiltration.pt  03_system_recon.pt  04_dropper_stage2.pt  05_safe_control_model.pt
files/: secure_model_loader.py  secure_model_loader_analysis.html
policy/: production.rego
src/secure_torch/: __init__.py  cache.py  cli.py  exceptions.py  format_detect.py  huggingface.py  loader.py  models.py  server.py  threat_score.py
tests/cve/: __init__.py  test_cve_extras.py  test_cve_regressions.py
tests/integration/: test_huggingface.py  test_huggingface_extras.py  test_opa_runner.py  test_provenance.py  test_sandbox.py  test_sandbox_extras.py
tests/unit/: test_api_extras.py  test_cli.py  test_format_detect.py  test_integration_stubs.py  test_logging.py  test_new_features.py  test_onnx_validator.py  test_parsers.py  test_pickle_extras.py  test_publisher_matching.py  test_safetensors_extras.py  test_sbom_parser.py  test_server.py  test_threat_score_extras.py
(+40 files in other folders)
